<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActivityInteractive</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    
    
    <string name="title">用户登陆</string>
    <string name="username">用户名</string>
    <string name="userpass">用户密码</string>
    <string name="addr">选择地址</string>
    <string name="cancle">取消</string>
    <string name="next">下一步</string>

</resources>
