<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/userpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userpass"
        android:ems="10"
        android:inputType="textPassword" />
    
    <LinearLayout  
   		 android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
         android:orientation="horizontal">
        
        <Button
        android:id="@+id/btn_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addr" />

        <TextView
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        
     </LinearLayout>

    <LinearLayout  
   		 android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:gravity="right"
         android:orientation="horizontal">
        
        <Button
        android:id="@+id/btn_cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancle" />
        
        <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />
     </LinearLayout>
    
</LinearLayout>
